blocks/header/header.css
/* ... */
header .nav-bottom ul {
  padding: 0;
  transform: translateY(50px);
}

@media (max-width: 899px) {
  header .nav-bottom ul {
    margin-top: 25px;
  }
}

header .nav-bottom li::after {
  content: "";
  width: 19px;
  height: 16px;
  background-image: url('/icons/icon_pink-arrow-right-md.png');
  background-size: 16px 16px;
  background-repeat: no-repeat;
  display: block;
  margin-left: auto;
  transform: translate(-16px, -2px);
}

header .nav-bottom li a em {
  font-size: 1.5rem;
}

header .nav-bottom li a:hover {
  font-family: var(--heading-font-family);
  text-decoration: none;
  font-weight: bold;
}

header .nav-bottom br {
  content: " ";
}

header .nav-bottom br::after {
  content: " ";
}

header .nav-bottom img {
  width: 32px;
  height: 32px;
  position: absolute;
  transform: translateY(-6px);
}

header .expanded .nav-bottom {
  display: block;
  background-color: var(--background-blue-1);
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  z-index: 11;
}

header .nav-top li:first-of-type {
  padding-left: 0;
}

header .nav-middle > div > div > div div:nth-of-type(1) {
  position: relative;
  top: 12px;
}

header .nav-middle > div > div > div div:nth-of-type(2) {
  font-weight: 500;
  position: relative;
  top: 5px;
}

header .nav-middle > div > div > div div:nth-of-type(2) p {
  display: inline-block;
  position: absolute;
  top: 52px;
}

header .nav-middle > div > div > div div:nth-of-type(2) p,
header .nav-middle > div > div > div div:nth-of-type(2) p a {
  font-weight: 400;
}

@media (min-width: 900px) {
  header .nav-middle > div > div > div div:nth-of-type(2) p,
  header .nav-middle > div > div > div div:nth-of-type(2) p a {
  font-weight: 500;
  color: var(--text-color);
}
}

header .nav-middle > div > div > div div:nth-of-type(2) p:nth-of-type(-n+2) {
  display: none;
}

header .nav-middle > div > div > div div:nth-of-type(2) p:nth-of-type(4) {
  left: 100px;
}

@media (max-width: 350px) {
  header .nav-middle > div > div > div div:nth-of-type(2) p:nth-of-type(3),
  header .nav-middle > div > div > div div:nth-of-type(2) p:nth-of-type(4) {
    display: none;
  }
}

header .nav-middle > div > div > div div:nth-of-type(2) p a::after {
  content: "";
  display: inline-block;
  background-image:url('/icons/icon_orange-small-arrow-right.png');
  background-size: 5px 7px;
  background-repeat: no-repeat;
  width: 5px;
  height: 7px;
  margin-left: 5px;
}

header .nav-middle > div > div > div div:nth-of-type(3) {
  position: absolute;
  top: 0;
  right: 12px;
  width: 100px;
  border-radius: 0 0 12px 12px;
  height: 12px;
  border-left: 2px solid var(--color-blue-2);
  border-bottom: 2px solid var(--color-blue-2);
  border-right: 2px solid var(--color-blue-2);
  font-size: var(--body-font-size-xs);
  text-transform: uppercase;
  text-align: right;
  margin-left: auto;
  background-image: url('/icons/icon-explore-hamburger.png');
  background-position: 21px 6px;
  background-repeat: no-repeat;
  background-size: 17px 13px;
  padding: 8px 14px 8px 4px;
  cursor: pointer;
}

@media (max-width: 899px) {
  header .expanded .nav-middle > div > div > div div:nth-of-type(3) {
    padding-right: 0;
  }
}

header .nav-middle > div > div > div div:nth-of-type(3) span.close {
  font-size: var(--body-font-size-s);
}

header .expanded .nav-middle > div > div > div div:nth-of-type(3) {
  z-index: 12;
  background-image: url('/icons/icon_close-x.png');
  background-size: 15px 15px;
  background-position: 34px 5px;
  top: -40px;
}

header .nav-middle > div > div > div div:nth-of-type(3) .close {
  display: none;
}

header .expanded .nav-middle > div > div > div div:nth-of-type(3) .close {
  display: block;
  color: var(--background-color);
}

header .expanded .nav-middle > div > div > div div:nth-of-type(3) .explore {
  display: none;
}
/* ... */

